[workspace]
resolver = "2"
members = ["renderer", "vger", "tiny_skia", "reactive", "editor-core", "examples/*", "floem_dylib", "floem_internal"]

[workspace.package]
license = "MIT"
version = "0.1.1"

[package]
name = "floem"
version.workspace = true
authors = ["The Floem contributors"]
readme = "README.md"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
edition = "2021"
rust-version = "1.75"
license.workspace = true

[workspace.dependencies]
serde = "1.0"
lapce-xi-rope = { version = "0.3.2", features = ["serde"] }
strum = "0.21.0"
strum_macros = "0.21.1"
once_cell = "1.17.1"

[dependencies]
floem_dylib = { path = "floem_dylib", default-features = false, optional = true }
floem_internal = { path = "floem_internal", default-features = false }

[features]
default = ["editor", "rfd-async-std"]
# TODO: this is only winit and the editor serde, there are other dependencies that still depend on
# serde
serde = ["floem_internal/serde"]
editor = ["floem_internal/editor"]

# rfd async runtime
rfd-async-std = ["floem_internal/rfd-async-std"]
rfd-tokio = ["floem_internal/rfd-tokio"]

dynamic_linking = ["dep:floem_dylib"]
